@@ -451,8 +451,8 @@ public class SolrIndexSearcher extends IndexSearcher implements Closeable,SolrIn
     }
 
     @Override
-    public void binaryField(FieldInfo fieldInfo, byte[] value, int offset, int length) throws IOException {
-      doc.add(new StoredField(fieldInfo.name, value, offset, length));
+    public void binaryField(FieldInfo fieldInfo, byte[] value) throws IOException {
+      doc.add(new StoredField(fieldInfo.name, value));
     }
 
     @Override
